--- a/TensorFlow_with_GPU.ipynb
+++ b/TensorFlow_with_GPU.ipynb
@@ -11,8 +11,8 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 2",
-      "name": "python2"
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -40,14 +40,69 @@
       "metadata": {
         "id": "eLkWvwE8qk0Y",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 734
+        },
+        "outputId": "b26fcc5a-251e-4351-a94c-d7023d0ff848"
       },
       "cell_type": "code",
       "source": [
-        "# Setup shit"
+        "# Setup shit\n",
+        "!pip install --upgrade pip\n",
+        "!pip install --upgrade tensorflow tqdm nltk flask\n",
+        "!python -m nltk.downloader -d $HOME/nltk data punkt"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already up-to-date: pip in /usr/local/lib/python3.6/dist-packages (18.1)\n",
+            "Requirement already up-to-date: tensorflow in /usr/local/lib/python3.6/dist-packages (1.12.0)\n",
+            "Requirement already up-to-date: tqdm in /usr/local/lib/python3.6/dist-packages (4.28.1)\n",
+            "Requirement already up-to-date: nltk in /usr/local/lib/python3.6/dist-packages (3.4)\n",
+            "Requirement already up-to-date: flask in /usr/local/lib/python3.6/dist-packages (1.0.2)\n",
+            "Requirement already satisfied, skipping upgrade: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (1.0.5)\n",
+            "Requirement already satisfied, skipping upgrade: keras-applications>=1.0.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (1.0.6)\n",
+            "Requirement already satisfied, skipping upgrade: astor>=0.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (0.7.1)\n",
+            "Requirement already satisfied, skipping upgrade: termcolor>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (1.1.0)\n",
+            "Requirement already satisfied, skipping upgrade: tensorboard<1.13.0,>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (1.12.0)\n",
+            "Requirement already satisfied, skipping upgrade: wheel>=0.26 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (0.32.3)\n",
+            "Requirement already satisfied, skipping upgrade: numpy>=1.13.3 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (1.14.6)\n",
+            "Requirement already satisfied, skipping upgrade: absl-py>=0.1.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (0.6.1)\n",
+            "Requirement already satisfied, skipping upgrade: gast>=0.2.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (0.2.0)\n",
+            "Requirement already satisfied, skipping upgrade: protobuf>=3.6.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (3.6.1)\n",
+            "Requirement already satisfied, skipping upgrade: grpcio>=1.8.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (1.15.0)\n",
+            "Requirement already satisfied, skipping upgrade: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow) (1.11.0)\n",
+            "Requirement already satisfied, skipping upgrade: singledispatch in /usr/local/lib/python3.6/dist-packages (from nltk) (3.4.0.3)\n",
+            "Requirement already satisfied, skipping upgrade: Werkzeug>=0.14 in /usr/local/lib/python3.6/dist-packages (from flask) (0.14.1)\n",
+            "Requirement already satisfied, skipping upgrade: Jinja2>=2.10 in /usr/local/lib/python3.6/dist-packages (from flask) (2.10)\n",
+            "Requirement already satisfied, skipping upgrade: click>=5.1 in /usr/local/lib/python3.6/dist-packages (from flask) (7.0)\n",
+            "Requirement already satisfied, skipping upgrade: itsdangerous>=0.24 in /usr/local/lib/python3.6/dist-packages (from flask) (1.1.0)\n",
+            "Requirement already satisfied, skipping upgrade: h5py in /usr/local/lib/python3.6/dist-packages (from keras-applications>=1.0.6->tensorflow) (2.8.0)\n",
+            "Requirement already satisfied, skipping upgrade: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.13.0,>=1.12.0->tensorflow) (3.0.1)\n",
+            "Requirement already satisfied, skipping upgrade: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.6.1->tensorflow) (40.6.2)\n",
+            "Requirement already satisfied, skipping upgrade: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from Jinja2>=2.10->flask) (1.1.0)\n",
+            "/usr/lib/python3.6/runpy.py:125: RuntimeWarning: 'nltk.downloader' found in sys.modules after import of package 'nltk', but prior to execution of 'nltk.downloader'; this may result in unpredictable behaviour\n",
+            "  warn(RuntimeWarning(msg))\n",
+            "[nltk_data] Error loading data: Package 'data' not found in index\n",
+            "Error installing package. Retry? [n/y/e]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/lib/python3.6/runpy.py\", line 193, in _run_module_as_main\n",
+            "    \"__main__\", mod_spec)\n",
+            "  File \"/usr/lib/python3.6/runpy.py\", line 85, in _run_code\n",
+            "    exec(code, run_globals)\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/nltk/downloader.py\", line 2583, in <module>\n",
+            "    halt_on_error=options.halt_on_error,\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/nltk/downloader.py\", line 798, in download\n",
+            "    choice = input().strip()\n",
+            "KeyboardInterrupt\n",
+            "^C\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
