--- a/TensorFlow_with_GPU.ipynb
+++ b/TensorFlow_with_GPU.ipynb
@@ -13,7 +13,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -106,6 +107,39 @@
     },
     {
       "metadata": {
+        "id": "hX3m5CHks_s7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "049c21e2-509c-4564-b0ff-bf179be2e785"
+      },
+      "cell_type": "code",
+      "source": [
+        "#!python -m nltk.downloader -d $HOME/nltk data punkt\n",
+        "import nltk\n",
+        "\n",
+        "nltk.downloader\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<module 'nltk.downloader' from '/usr/local/lib/python3.6/dist-packages/nltk/downloader.py'>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "metadata": {
         "colab_type": "text",
         "id": "BlmQIFSLZDdc"
       },
@@ -163,7 +197,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "t9ALbbpmY9rm",
-        "outputId": "c5ee74e3-f88b-4660-dcba-354d09fa5659",
+        "outputId": "9650528e-520d-4924-ffdf-a46667479b0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -219,17 +253,17 @@
         "\n",
         "sess.close()"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Time (s) to convolve 32x7x7x3 filter over random 100x100x100x3 images (batch x height x width x channel). Sum of ten runs.\n",
             "CPU (s):\n",
-            "8.350230318000058\n",
+            "10.257444591999956\n",
             "GPU (s):\n",
-            "0.1842791589999706\n",
-            "GPU speedup over CPU: 45x\n"
+            "2.02506232799999\n",
+            "GPU speedup over CPU: 5x\n"
           ],
           "name": "stdout"
         }
